Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/static/import/StaticImport2.out
StaticImport2.java:13:9: compiler.err.cant.resolve.location.args: kindname.method, m, , , (compiler.misc.location: kindname.class, StaticImport2, null)
1 error
